# ChangeLog for app-admin/admin-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*admin-tools-0.20 (25 May 2014)

  25 May 2014; Johann Schmitz <ercpe@gentoo.org> +admin-tools-0.20.ebuild:
  Version bump of admin-tools

  03 Jul 2013; Justin Lecher <jlec@gentoo.org> -admin-tools-0.17.ebuild,
  -admin-tools-0.18.ebuild, admin-tools-0.19.ebuild, metadata.xml:
  Drop old; bump to EAPI=5; fix license

*admin-tools-0.19 (17 Jun 2012)

  17 Jun 2012; Justin Lecher <jlec@gentoo.org> +admin-tools-0.19.ebuild:
  Version Bump, fixes bug 191 and 193

  06 Jun 2012; Justin Lecher <jlec@gentoo.org> admin-tools-0.18.ebuild:
  Add missing dep on app-admin/lib_users

  02 Jun 2012; Justin Lecher <jlec@gentoo.org> Manifest:
  Recreate full Manifest

  02 Jun 2012; Justin Lecher <jlec@gentoo.org> Manifest:
  Thin manifest

*admin-tools-0.18 (29 Apr 2012)

  29 Apr 2012; Justin Lecher <jlec@gentoo.org> +admin-tools-0.18.ebuild:
  Version Bump

  22 Mar 2012; Justin Lecher <jlec@gentoo.org> Manifest:
  Redigest the manifest

*admin-tools-0.17 (21 Mar 2012)

  21 Mar 2012; Justin Lecher <jlec@gentoo.org> +admin-tools-0.17.ebuild,
  metadata.xml:
  Version Bump, fixes #136 & #175

  06 Jan 2011; Justin Lecher <jlec@gentoo.org> admin-tools-0.9.ebuild:
  Fixed $S

  05 Jan 2011; Justin Lecher <jlec@gentoo.org> +admin-tools-0.9.ebuild:
  Version Bump

  26 Dec 2010; Justin Lecher <jlec@gentoo.org> +admin-tools-0.7.ebuild:
  Version Bump

  14 Dec 2010; Justin Lecher <jlec@gentoo.org> Manifest:
  Corrected Chksums

  13 Dec 2010; Justin Lecher <jlec@gentoo.org> -admin-tools-0.4.ebuild,
  +admin-tools-0.5.ebuild:
  Version Bump

  30 Nov 2010; Justin Lecher <jlec@gentoo.org> +admin-tools-0.4.ebuild:
  Version Bump

  19 Jan 2010; Justin Lecher (jlec) <jlec@j-schmitz.net>
  admin-tools-0.1.ebuild, +metadata.xml:
  Sorry, aber ich mir war grad langweilig ;)